--- a/admin/referrals.html
+++ b/admin/referrals.html
@@ -41,14 +41,32 @@ document.addEventListener("DOMContentLoaded",()=>{setActive("nav-referrals");loa
     <a id="nav-referrals" class="active" href="./referrals.html">🎁 Referrals</a>
     <a href="./disputes.html">⚖️ Disputes</a>
     <a href="./adjustments.html">💎 Adjust Points</a>
+    <a id="nav-alerts" href="../admin-alerts.html">🔔 Alerts</a>
   </nav>
 </aside>
 <div>
-<header><h2>Referrals</h2></header>
+<header><h2>Referrals</h2><div id="demoBadge" style="display:none; margin-left:auto; padding:6px 10px; border:1px solid rgba(255,215,0,.35); color:#111; background:#FFD700; border-radius:999px; font-weight:700; font-size:12px;">Demo Mode</div></header>
 <main>
   <table><thead>
     <tr><th>ID</th><th>Referrer</th><th>Referee</th><th>Status</th><th>Action</th></tr>
   </thead><tbody></tbody></table>
 </main>
 </div></div>
+<script>
+  (function(){
+    var isDemo = !window.firebaseConfig || !window.firebaseConfig.apiKey || window.firebaseConfig.apiKey === 'your-api-key-here';
+    var badge = document.getElementById('demoBadge'); if (badge) badge.style.display = isDemo ? 'inline-block':'none';
+    if (!isDemo) return;
+    var tb=document.querySelector('tbody'); if (!tb) return; tb.innerHTML='';
+    var rows=[
+      {id:'#REF-5001', referrer:'alice@example.com', referee:'bob@example.com', status:'pending'},
+      {id:'#REF-5000', referrer:'tom@example.com', referee:'sam@example.com', status:'completed'}
+    ];
+    rows.forEach(function(r){
+      var tr=document.createElement('tr');
+      tr.innerHTML = '<td>'+r.id+'</td><td>'+r.referrer+'</td><td>'+r.referee+'</td><td>'+r.status+'</td><td>'+(r.status!=='completed'?' <button class="btn gold" disabled>Mark Completed</button>':'<span class="badge ok">Done</span>')+'</td>';
+      tb.appendChild(tr);
+    });
+  })();
+</script>
 </body></html>
